# agents-memory

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-global-sqlite-project-memory.md
plugins/opencode/: agents-memory.js
scripts/: common.sh  install.sh  uninstall.sh  update.sh
skills/get-learnings/: SKILL.md
skills/save-learnings/: SKILL.md
skills/setup-agents-memory/: SKILL.md
src/agents_memory/: __init__.py  agent_setup.py  cli.py  config.py  constants.py  errors.py  formatters.py  identity.py  store.py
src/agents_memory/dashboard/: data.py  index.html  server.py
tests/: test_cli.py  test_dashboard_data.py  test_dashboard_server.py
