[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-memory"
version = "0.1.0"
description = "Local project memory for AI coding agents."
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/juancruzrossi/agents-memory"

[project.scripts]
agents-memory = "agents_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["B007"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
